tests/ui/lifetimes/undeclared-lifetime-used-in-debug-macro-issue-70152.stderr
error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/undeclared-lifetime-used-in-debug-macro-issue-70152.rs:3:9
   |
LL |     a: &'b str,
   |         ^^ undeclared lifetime
   |
help: consider introducing lifetime `'b` here
   |
LL | struct Test<'b> {
   |            ++++

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/undeclared-lifetime-used-in-debug-macro-issue-70152.rs:3:9
   |
LL | #[derive(Eq, PartialEq)]
   |          -- lifetime `'b` is missing in item created through this procedural macro
LL | struct Test {
LL |     a: &'b str,
   |         ^^ undeclared lifetime
   |
help: consider introducing lifetime `'b` here
   |
LL | struct Test<'b> {
   |            ++++

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/undeclared-lifetime-used-in-debug-macro-issue-70152.rs:13:13
   |
LL |     fn foo(&'b self) {}
   |             ^^ undeclared lifetime
   |
help: consider introducing lifetime `'b` here
   |
LL |     fn foo<'b>(&'b self) {}
   |           ++++
help: consider introducing lifetime `'b` here
   |
LL | impl<'b> T for Test {
   |     ++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0261`.
